@@ -1,5 +1,9 @@
 LIST OF CHANGES
 
+ - Remove live tests for st::api::lims XML driver and other XML-based APIs.
+   The CI tests are mostly run on hosts with no access to either production
+   or development hosts. 
+
 release 91.13.0
  - Extend npg_status2file script to optionally save statuses to the tracking
    database and renamed the script to npg_status_save.
